apps/base/adguard/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: kube-system
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: adguard
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: adguard
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http-initial
      port: 3000
      targetPort: http-initial
      protocol: TCP
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https-tcp
      port: 443
      targetPort: https-tcp
      protocol: TCP
    - name: https-udp
      port: 443
      targetPort: https-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tls
      port: 853
      targetPort: dns-tls
      protocol: TCP
    - name: dns-quic
      port: 853
      targetPort: dns-quic
      protocol: UDP
    - name: dns-crypt-tcp
      port: 5443
      targetPort: dns-crypt-tcp
      protocol: TCP
    - name: dns-crypt-udp
      port: 5443
      targetPort: dns-crypt-udp
      protocol: UDP
    - name: debug
      port: 6060
      targetPort: debug
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: kube-system
  matchLabels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: adguard
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: adguard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: adguard
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-initial
              protocol: TCP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https-tcp
              protocol: TCP
            - containerPort: 443
              name: https-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 853
              name: dns-tls
              protocol: TCP
            - containerPort: 853
              name: dns-quic
              protocol: UDP
            - containerPort: 5443
              name: dns-crypt-tcp
              protocol: TCP
            - containerPort: 5443
              name: dns-crypt-udp
              protocol: UDP
            - containerPort: 6060
              name: debug
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: adguard-config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-pvc
        - name: adguard-config
          configMap:
            name: adguard-config
