apps/base/adguard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-dashboard-https
  namespace: adguard
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: adguard-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guard.powell.place`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - name: adguard-home-http
          port: 80
